[gd_scene load_steps=8 format=2]

[ext_resource path="res://Phong/autoload/pause.gd" type="Script" id=1]
[ext_resource path="res://Phong/img/Continue_hover.png" type="Texture" id=2]
[ext_resource path="res://Phong/img/Continue.png" type="Texture" id=3]
[ext_resource path="res://Phong/img/Quit_hover.png" type="Texture" id=4]
[ext_resource path="res://Phong/img/Quit.png" type="Texture" id=5]
[ext_resource path="res://Phong/img/control.png" type="Texture" id=6]
[ext_resource path="res://Phong/img/control_hover.png" type="Texture" id=7]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.840881
margin_bottom = -0.840881
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -198.0
margin_top = -24.0
margin_right = 211.0
margin_bottom = 22.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="control" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.0
margin_top = 61.0
margin_right = 161.0
margin_bottom = 104.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.5592
margin_top = 143.636
margin_right = 89.4408
margin_bottom = 184.636
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="control" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
